<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvNoti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/title_login"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="30dip"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/content_login"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:hint="@string/UserName"
                android:maxLines="1"
                android:text="ducnt"
                android:padding="10dip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#353535" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="123456"
                android:padding="10dip" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dip"
                android:text="@string/Login"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>